--- a/NNZFSC/Web.config
+++ b/NNZFSC/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NNZFSC-20180525014614.mdf;Initial Catalog=aspnet-NNZFSC-20180525014614;Integrated Security=True" providerName="System.Data.SqlClient" />
+   <add name="connection" connectionString="Data Source=OEM-PC; Initial Initial Catalog=AviDb; UID=sa; Password=avi03305;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
