Adding Interface, Model and Repository class for Member

--- a/NNZFSC/NNZFSC.csproj
+++ b/NNZFSC/NNZFSC.csproj
@@ -205,7 +205,10 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MemberRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRegisterMember.cs" />
+    <Compile Include="Repository\RegisterMember.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
