--- a/NNZFSC/Web.config
+++ b/NNZFSC/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NNZFSC-20180525014614.mdf;Initial Catalog=aspnet-NNZFSC-20180525014614;Integrated Security=True" providerName="System.Data.SqlClient" />
-   <add name="connection" connectionString="Data Source=OEM-PC; Initial Initial Catalog=AviDb; UID=sa; Password=avi03305;" providerName="System.Data.SqlClient" />
+   <add name="connection" connectionString="Data Source=OEM-PC;Database=AviDb; UID=sa; Password=avi03305;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -25,7 +25,11 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  </system.web>
+  <pages>
+      <namespaces>
+        <add namespace="GridMvc" />
+      </namespaces>
+    </pages></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -70,11 +74,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
