--- a/NNZFSC/NNZFSC.csproj
+++ b/NNZFSC/NNZFSC.csproj
@@ -297,6 +297,7 @@
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\RegisterMember\index.cshtml" />
     <Content Include="Views\RegisterMember\Details.cshtml" />
+    <Content Include="Views\RegisterMember\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -308,6 +309,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
