Adding Nunit Test to check Insetion and Update of Member

--- a/NNZFSC.Tests/App.config
+++ b/NNZFSC.Tests/App.config
@@ -9,7 +9,7 @@
     </appSettings>
 
     <connectionStrings>
-
+        <add name="connection" connectionString="Data Source=OEM-PC;Database=AviDb; UID=sa; Password=avi03305;" providerName="System.Data.SqlClient" />
     </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
