Saving and Updating Payment Details

--- a/NNZFSC/NNZFSC.csproj
+++ b/NNZFSC/NNZFSC.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\RegisterMemberController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -210,9 +211,12 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MemberPayment.cs" />
     <Compile Include="Models\MemberRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IPaymentMember.cs" />
     <Compile Include="Repository\IRegisterMember.cs" />
+    <Compile Include="Repository\PaymentMember.cs" />
     <Compile Include="Repository\RegisterMember.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -297,12 +301,12 @@
     <Content Include="Views\Shared\_GridPager.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\RegisterMember\index.cshtml" />
-    <Content Include="Views\RegisterMember\Details.cshtml" />
     <Content Include="Views\RegisterMember\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\RenewMember\" />
+    <Folder Include="Views\NewFolder1\" />
+    <Folder Include="Views\Payment\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
