--- a/NNZFSC/NNZFSC.csproj
+++ b/NNZFSC/NNZFSC.csproj
@@ -216,6 +216,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
+    <Compile Include="Controllers\EventsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PaymentController.cs" />
@@ -224,6 +225,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Events.cs" />
     <Compile Include="Models\ExtensionMethod.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -236,7 +238,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AccountRepository.cs" />
+    <Compile Include="Repository\AddEvents.cs" />
     <Compile Include="Repository\IAccount .cs" />
+    <Compile Include="Repository\IEvents.cs" />
     <Compile Include="Repository\IPaymentMember.cs" />
     <Compile Include="Repository\IRegisterMember.cs" />
     <Compile Include="Repository\PaymentMember.cs" />
@@ -759,6 +763,7 @@
     <Content Include="Views\RegisterMember\Details.cshtml" />
     <Content Include="Views\Shared\_LayoutServer.cshtml" />
     <Content Include="Views\Shared\_LayoutClient.cshtml" />
+    <Content Include="Views\Events\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
@@ -799,7 +804,7 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>51231</DevelopmentServerPort>
+          <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>http://localhost:51231/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
