Insert, Update and delete Events Using Entity framework  model

--- a/NNZFSC/Web.config
+++ b/NNZFSC/Web.config
@@ -10,10 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NNZFSC-20180525014614.mdf;Initial Catalog=aspnet-NNZFSC-20180525014614;Integrated Security=True" providerName="System.Data.SqlClient" />
-   <add name="connection" connectionString="Data Source=OEM-PC;Database=AviDb; UID=sa; Password=avi03305;" providerName="System.Data.SqlClient" />
+    <add name="connection" connectionString="Data Source=OEM-PC;Database=AviDb; UID=sa; Password=avi03305;" providerName="System.Data.SqlClient" />
+    <add name="EventsContext" connectionString="metadata=res://*/Models.EventsDataModel.csdl|res://*/Models.EventsDataModel.ssdl|res://*/Models.EventsDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OEM-PC;initial catalog=AviDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  
-  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -27,11 +26,15 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  <pages>
+    <pages>
       <namespaces>
         <add namespace="GridMvc" />
-      <add namespace="MVCControlsToolkit.Core" /><add namespace="MVCControlsToolkit.Controls" /><add namespace="MVCControlsToolkit.Controls.Validation" /></namespaces>
-    </pages></system.web>
+        <add namespace="MVCControlsToolkit.Core" />
+        <add namespace="MVCControlsToolkit.Controls" />
+        <add namespace="MVCControlsToolkit.Controls.Validation" />
+      </namespaces>
+    </pages>
+  </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
