--- a/NNZFSC/NNZFSC.csproj
+++ b/NNZFSC/NNZFSC.csproj
@@ -93,6 +93,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -225,7 +227,24 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Events.cs" />
+    <Compile Include="Models\Events.cs">
+      <DependentUpon>EventsDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EventsDataModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventsDataModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EventsDataModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventsDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EventsDataModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventsDataModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\ExtensionMethod.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -314,6 +333,16 @@
     <Content Include="img\NNZFSC_Cover_1.jpg" />
     <Content Include="img\NNZFSC_Logo.jpg" />
     <Content Include="img\THCup.png" />
+    <Content Include="Models\EventsDataModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventsDataModel.edmx</DependentUpon>
+      <LastGenOutput>EventsDataModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\EventsDataModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventsDataModel.edmx</DependentUpon>
+      <LastGenOutput>EventsDataModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -326,6 +355,13 @@
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>NNZFSCDataContext.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </Content>
+    <EntityDeploy Include="Models\EventsDataModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>EventsDataModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\EventsDataModel.edmx.diagram">
+      <DependentUpon>EventsDataModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.af-ZA.js" />
@@ -764,6 +800,10 @@
     <Content Include="Views\Shared\_LayoutServer.cshtml" />
     <Content Include="Views\Shared\_LayoutClient.cshtml" />
     <Content Include="Views\Events\Create.cshtml" />
+    <Content Include="Views\Events\Delete.cshtml" />
+    <Content Include="Views\Events\Details.cshtml" />
+    <Content Include="Views\Events\Edit.cshtml" />
+    <Content Include="Views\Events\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
@@ -782,6 +822,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Models\NNZFSCDataContext.dbml.layout">
